--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -5,6 +5,7 @@
   width: 20rem;
   height: 13rem;
   background-color: #fff;
+  z-index: 1000000;
 }
 
 @media screen and (max-width: 576px) {
