--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -17,6 +17,7 @@
   top: 0;
   height: 100vh;
   width: 100vw;
+  z-index: 99999999999999999;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
